h1. CHANGELOG

h2. 1.4.4 April 3, 2012

* update gem 'factory_girl_rails' from 3.0.0 to 3.1.0
* update gem 'bson_ext' from 1.6.1 to 1.6.2
* update 'devise' recipe to use Devise 2.1.0.rc when devise_invitable is selected
* tweak 'simple_form' recipe

h2. 1.4.3 April 3, 2012

* update 'add_user' and 'omniauth' recipes to fix problem generating rails3-mongoid-omniauth example
* add 'redis' recipe (contributed by Julián Porta)
* add 'resque' recipe (contributed by Julián Porta)

h2. 1.4.2 April 2, 2012

* add 'compass_960' recipe (contributed by Julián Porta)
* update 'compass' recipe (contributed by Julián Porta)

h2. 1.4.1 April 2, 2012

* add 'datamapper' recipe (contributed by Peter Fern)
* rename 'hoptoad' recipe to 'airbrake' and update (contributed by Peter Fern)
* update 'extras' recipe to run 'rails-footnotes' generator when selected (contributed by Peter Fern)
* update 'devise' recipe to use Devise 2.0.4 when devise_invitable is selected (pending fix to devise_invitable)
* update 'add_user' recipe to support Devise 'confirmable' option for mongoid
* update 'seed_database' recipe to support mongoid with 'Time.now.utc' instead of 'DateTime.now'
* update gem 'rails-backbone' from 0.7.0 to 0.7.1
* update gem 'factory_girl_rails' from 2.0.0.rc to 3.0.0
* update gem 'mongoid' from 2.4.6 to 2.4.7
* update gem 'database_cleaner' from 0.7.1 to 0.7.2
* update gem 'launchy' from 2.0.5 to 2.1.0

h2. 1.4.0 April 2, 2012

* added template command (no longer using 'rake print') (contributed by Keenan Brock)  

h2. 1.3.1 March 15, 2012

* update 'devise' recipe to remove deprecated use of FactoryGirl

h2. 1.3.0 March 15, 2012

* implement and enable support for 'run_after' parameter (contributed by Rico Sta. Cruz) 
* update 'omniauth' recipe to add 'omniauth-google' gem (contributed by Rico Sta. Cruz)
* update 'compass' recipe to add 'compass-rails' gem (contributed by Rico Sta. Cruz)
* update gem 'compass' from 0.12.rc.1 to 0.12.1 (contributed by Rico Sta. Cruz) 