@@ -2,24 +2,26 @@
 # https://github.com/RailsApps/rails_apps_composer/blob/master/recipes/extras.rb
 
 if config['footnotes']
-  say_wizard "Extras recipe running 'after bundler'"
+  say_wizard "Adding 'rails-footnotes'"
   gem 'rails-footnotes', '>= 3.7', :group => :development
   after_bundler do
     generate 'rails_footnotes:install'
   end
-else
-  recipes.delete('footnotes')
 end
 
 if config['ban_spiders']
-  say_wizard "BanSpiders recipe running 'after bundler'"
+  say_wizard "Banning spiders by modifying 'public/robots.txt'"
   after_bundler do
     # ban spiders from your site by changing robots.txt
     gsub_file 'public/robots.txt', /# User-Agent/, 'User-Agent'
     gsub_file 'public/robots.txt', /# Disallow/, 'Disallow'
   end
-else
-  recipes.delete('ban_spiders')
+end
+
+if config['paginate']
+  say_wizard "Adding 'will_paginate'"
+  gem 'will_paginate', '>= 3.0.3'
+  recipes << 'paginate'
 end
 
 __END__
@@ -38,3 +40,6 @@ config:
   - ban_spiders:
       type: boolean
       prompt: Would you like to set a robots.txt file to ban spiders?
+  - paginate:
+      type: boolean
+      prompt: Would you like to add 'will_paginate' for pagination?
