@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "1.4.4"
+  VERSION = "1.4.5"
 end
